fix [IDR-319]: fixed choose tags in the autocomplete (removed blurring as it works faster than clicking)

--- a/src/components/molecules/AppAutocomplete/styles.scss
+++ b/src/components/molecules/AppAutocomplete/styles.scss
@@ -36,6 +36,7 @@
 .selected-options {
     display: flex;
     padding: 10px;
+    background-color: var(--idr-item-bg);
 
     li {
         background-color: var(--idr-chip-color);
